--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,16 +17,17 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 7.0.x
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}  
     - name: Restore dependencies
       run: dotnet restore DBManager/DBManager.csproj
     - name: Build
       run: dotnet build --no-restore DBManager/DBManager.csproj
     - name: Pack    
       if: github.event_name != 'pull_request'
-      run: dotnet pack "DBManager/DBManager.csproj" -c Release -o out -p:PackageVersion=1.0.${{ github.run_number }}
+      run: dotnet pack "DBManager/DBManager.csproj" -c Release -o out -p:PackageVersion=1.0${{ github.run_number }}
     - name: Push generated package to GitHub registry
       if: github.event_name != 'pull_request'
-      run: dotnet nuget push ./out/*.nupkg 
+      run: dotnet nuget push ./out/*.nupkg --source "https://nuget.pkg.github.com/f4n0/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} 
       env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}  
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  
