--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+    
+permissions:
+  packages: write
+  
 jobs:
   build:
 
@@ -25,7 +28,7 @@ jobs:
       run: dotnet build --no-restore DBManager/DBManager.csproj
     - name: Pack    
       if: github.event_name != 'pull_request'
-      run: dotnet pack "DBManager/DBManager.csproj" -c Release -o out -p:PackageVersion=1.0${{ github.run_number }}
+      run: dotnet pack "DBManager/DBManager.csproj" -c Release -o out -p:PackageVersion=1.0.${{ github.run_number }}
     - name: Push generated package to GitHub registry
       if: github.event_name != 'pull_request'
       run: dotnet nuget push ./out/*.nupkg --source "https://nuget.pkg.github.com/f4n0/index.json" --api-key ${GITHUB_TOKEN} 
