--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,10 +5,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-    
-permissions:
-  packages: write
-  
+
 jobs:
   build:
 
@@ -33,4 +30,4 @@ jobs:
       if: github.event_name != 'pull_request'
       run: dotnet nuget push ./out/*.nupkg --source "https://nuget.pkg.github.com/f4n0/index.json" --api-key ${GITHUB_TOKEN} 
       env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  
+        GITHUB_TOKEN: ${{secrets.TOKEN}}  
